# JanWorkspaceManager

./: README.md  jan_workspace_manager.py  pyproject.toml  requirements.txt
src/jan_ws_man/: jan_ws_man.py
