[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "janwsmanager"
version = "0.1.0"
description = "Workspace manager for the Jan chat application"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "appdirs>=1.4.4",
  "GitPython>=3.1.0",
  "wxPython>=4.2.0",
]

[project.scripts]
janws = "jan_ws_man.jan_ws_man:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
